experimental/ir/testdata/options/validate/packed_2023.proto.stderr.txt
error: expected repeated field, found singular field
  --> testdata/options/validate/packed_2023.proto:22:5
   |
22 |     int32 o1 = 1 [features.repeated_field_encoding = PACKED];
   |     ^^^^^         -------------------------------- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected repeated field, found singular field
  --> testdata/options/validate/packed_2023.proto:23:5
   |
23 |     int32 o2 = 2 [features.repeated_field_encoding = EXPANDED];
   |     ^^^^^         -------------------------------- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected packable type, found message type `buf.test.M`
  --> testdata/options/validate/packed_2023.proto:25:14
   |
25 |     repeated M m1 = 3 [features.repeated_field_encoding = PACKED];
   |              ^         --------------------------------
   |                         |
   |                         packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected packable type, found message type `buf.test.M`
  --> testdata/options/validate/packed_2023.proto:26:14
   |
26 |     repeated M m2 = 4 [features.repeated_field_encoding = EXPANDED];
   |              ^         --------------------------------
   |                         |
   |                         packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: `packed` is not supported in Edition 2023
  --> testdata/options/validate/packed_2023.proto:34:28
   |
15 | edition = "2023";
   |           ------ edition specified here
...
34 |     repeated float f3 = 9 [packed = true];
   |                            ^^^^^^
  help: replace with `repeated_field_encoding`
   |
34 | -     repeated float f3 = 9 [packed = true];
34 | +     repeated float f3 = 9 [repeated_field_encoding = PACKED];
   |
   = help: removed in Edition 2023

error: `packed` is not supported in Edition 2023
  --> testdata/options/validate/packed_2023.proto:35:29
   |
15 | edition = "2023";
   |           ------ edition specified here
...
34 |     repeated float f3 = 9 [packed = true];
35 |     repeated float f4 = 10 [packed = false];
   |                             ^^^^^^
  help: replace with `repeated_field_encoding`
   |
35 | -     repeated float f4 = 10 [packed = false];
35 | +     repeated float f4 = 10 [repeated_field_encoding = EXPANDED];
   |
   = help: removed in Edition 2023

encountered 6 errors
